# lib-iot-client

./: CMakeLists.txt  README.md
serialport/: CMakeLists.txt
serialport/src/: serialport.c  serialport.h
test/: CMakeLists.txt  serialport_uinttest.cpp
test/gtest/: CMakeLists.txt
